# alura-skills-and-go-agentic-engineering

./: README.md
Aula 1/: .env.example  README.md  requirements.txt
Aula 1/data/: logs.json  runbooks.json  service_status.json  tickets.json
Aula 1/notebooks/: Aula 1A - Introdução a workflows determinísticos e LLMs.ipynb  Aula 1B - Agentes e tools.ipynb
Aula 2/: README.md  Roteiro para prática da Aula 2.md  requirements.txt
Aula 2/notebooks/: Aula 2A - Agente único para resolução.ipynb  Aula 2B - Passando para Multiagentes.ipynb  Aula 2C - Multiagentes com Langgraph.ipynb  Aula 2D - Revisão, limites e evoluções.ipynb
Aula 2/target_project/: pyproject.toml
Aula 3/: .env.example  README.md  requirements-aula3.txt
Aula 3/notebooks/: 01_engenharia_de_contexto_com_agentes.ipynb  02_avaliacao_de_sistemas_agenticos.ipynb  03_fallbacks_regressao_e_revisao_humana.ipynb
Aula 4/: README.md  requirements-aula4.txt
Aula 4/notebooks/: 01_do_prototipo_ao_workflow_operacional.ipynb  02_observabilidade_e_metricas.ipynb  (+1 more)
shared/aula_3/: __init__.py  paths.py  (+4 more)
target_project/: README.md
target_project/incident_agent/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
target_project/incident_agent/app/: api.py  cli.py  single_agent_baseline.py  workflow.py
target_project/incident_agent/data/knowledge/: history_pipeline_timeout.json  history_secret_exposure.json  log_api_latency.json  log_pipeline_timeout.json  runbook_api_latency.json  runbook_pipeline_timeout.json  runbook_secret_exposure.json
target_project/incident_agent/tests/: test_validation.py
(+36 files in other folders)
