[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-agent-aula4"
version = "0.1.0"
description = "Projeto didático de operacionalização de workflow agêntico com LangGraph"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.4,<1.0",
  "langchain-core>=0.3,<1.0",
  "langchain-openai>=0.3,<1.0",
  "pydantic>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.34,<1.0",
  "tiktoken>=0.9,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "httpx>=0.28,<1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["../.."]
